# azan-clock

./: flash.sh  log.lvgl_porting.20241220225452.txt  ntp-server.py  partitions.csv  sdkconfig  sdkconfig.bak  sdkconfig.defaults  sdkconfig.old  simulate.sh  t.sh  tests.md
50_arabian_elements_01/50_arabian_elements_01/: arabian_elements_01.ai  arabian_elements_01.dwg  arabian_elements_01.dxf  arabian_elements_01.eps  arabian_elements_02.ai  arabian_elements_02.dwg  arabian_elements_02.dxf  arabian_elements_02.eps  arabian_elements_03.ai  arabian_elements_03.dwg  arabian_elements_03.dxf  arabian_elements_03.eps  arabian_elements_04.ai  arabian_elements_04.dwg  arabian_elements_04.dxf  arabian_elements_04.eps  arabian_elements_05.ai  arabian_elements_05.dwg  arabian_elements_05.dxf  arabian_elements_05.eps  arabian_elements_06.ai  arabian_elements_06.dwg  arabian_elements_06.dxf  arabian_elements_06.eps  arabian_elements_07.ai  arabian_elements_07.dwg  arabian_elements_07.dxf  arabian_elements_07.eps  arabian_elements_08.ai  arabian_elements_08.dwg  arabian_elements_08.dxf  arabian_elements_08.eps  arabian_elements_09.ai  arabian_elements_09.dwg  arabian_elements_09.dxf  arabian_elements_09.eps  arabian_elements_10.ai  arabian_elements_10.dwg  arabian_elements_10.dxf  arabian_elements_10.eps  (+72 more)
50_arabian_elements_02/50_arabian_elements_02/: arabian_elements_29.ai  arabian_elements_29.dwg  arabian_elements_29.dxf  arabian_elements_29.eps  arabian_elements_30.ai  arabian_elements_30.dwg  arabian_elements_30.dxf  arabian_elements_30.eps  arabian_elements_31.ai  arabian_elements_31.dwg  arabian_elements_31.dxf  arabian_elements_31.eps  arabian_elements_32.ai  arabian_elements_32.dwg  arabian_elements_32.dxf  arabian_elements_32.eps  arabian_elements_33.ai  arabian_elements_33.dwg  arabian_elements_33.dxf  arabian_elements_33.eps  arabian_elements_34.ai  arabian_elements_34.dwg  arabian_elements_34.dxf  arabian_elements_34.eps  arabian_elements_35.ai  arabian_elements_35.dwg  arabian_elements_35.dxf  arabian_elements_35.eps  arabian_elements_36.ai  arabian_elements_36.dwg  (+58 more)
font-ranges/: FontAwesome_Brands.csv  FontAwesome_Regular.csv  FontAwesome_Solid_1.csv  FontAwesome_Solid_2.csv
fonts/: build_fonts.sh
main/: CMakeLists.txt  a..py  azan_clock.c  azan_clock.h  clock.c  clock.h  idf_component.yml  lv_conf.h  lvgl_port.c  lvgl_port_qemu.c  main.c  main_simulator.c  prayers.c  prayers.h  settings.c  settings.h  systime.c  systime.h  timezones.c  timezones.h  waveshare_rgb_lcd_port.c  weather.c  weather.h  wifi.c  wifi.h
main/fonts/: noto_naskh_40.c
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_leftpanel.c  ui_comp_leftpanel.h
main/ui/fonts/: ui_font_FontAwesome_Regular_24.c  ui_font_Montserrat_SemiBold_110.c  ui_font_Montserrat_SemiBold_80.c  ui_font_Montserrat_SemiBold_90.c
main/ui/images/: ui_img_3d_printer_bg_png.c  ui_img_arrow_down_png.c  ui_img_arrow_left_png.c  ui_img_arrow_right_png.c  ui_img_arrow_up_png.c  ui_img_btn_main_off_png.c  ui_img_btn_main_on_png.c  ui_img_btn_move_png.c  ui_img_btn_pad_bottom_png.c  ui_img_btn_pad_top_png.c  ui_img_btn_print_down_png.c  ui_img_btn_print_png.c  ui_img_btn_print_top_off_png.c  ui_img_btn_setting_png.c  ui_img_btn_z_botton_png.c  ui_img_btn_z_top_png.c  ui_img_day_clear_png.c  ui_img_day_dense_drizzle_png.c  ui_img_day_dense_freezing_drizzle_png.c  ui_img_day_fog_png.c  ui_img_day_heavy_freezing_rain_png.c  ui_img_day_heavy_rain_png.c  ui_img_day_heavy_snowfall_png.c  ui_img_day_light_drizzle_png.c  ui_img_day_light_freezing_drizzle_png.c  ui_img_day_light_freezing_rain_png.c  ui_img_day_light_rain_png.c  ui_img_day_moderate_drizzle_png.c  ui_img_day_moderate_rain_png.c  ui_img_day_mostly_clear_png.c  ui_img_day_overcast_png.c  ui_img_day_partly_cloudy_png.c  ui_img_day_rime_fog_png.c  ui_img_day_slight_snowfall_png.c  ui_img_day_snowflake_png.c  ui_img_day_thunderstorm_png.c  ui_img_day_thunderstorm_with_hail_png.c  ui_img_day_unknown_png.c  ui_img_icn_bed_png.c  ui_img_icn_head_png.c  (+35 more)
main/ui/screens/: ui_Loading_Screen.c  ui_Main_Screen.c  ui_Prayers_Screen.c  ui_Screen_1_Print.c  ui_Screen_2_Move.c  ui_Screen_3_Setting.c  ui_Settings_Screen.c  ui_Setup_Screen.c
squareline/: azan_clock.sll  azan_clock.spj  azan_clock_events.py
utils/: allowd_images  normalize_and_filter.sh
(+17 files in other folders)
